--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
                 <h1>Reported posts</h1>
             </div>
         </main>
+        <!-- Bonous questions section  -->
+        <section class="QsnDiv">
+            <h1>Questions & Answers</h1>
+
+        </section>
         <footer></footer>
 
         <!-- add javascript  file  -->
