--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         <!-- Bonous questions section  -->
         <section class="QsnDiv">
             <h1>Questions & Answers</h1>
+            <h3><span>Ques: </span> How does javascript work?</h3>
 
         </section>
         <footer></footer>
