--- a/index.html
+++ b/index.html
@@ -80,7 +80,12 @@
         <!-- Bonous questions section  -->
         <section class="QsnDiv">
             <h1>Questions & Answers</h1>
-            <h3><span>Ques: </span> How does javascript work?</h3>
+            <h4><span>Ques: </span> How does javascript work?</h4>
+            <p><h5>Ans: </h5></p>
+            <h4><span>Ques: </span> What Does javascript event loop?</h4>
+            <p><h5>Ans: </h5></p>
+            <h4><span>Ques: </span> Difference between local storage vs session storage?</h4>
+            <p><h5>Ans: </h5></p>
 
         </section>
         <footer></footer>
