--- a/index.html
+++ b/index.html
@@ -81,9 +81,8 @@
         <section class="QsnDiv">
             <h1>Questions & Answers</h1>
             <h4><span>Ques: </span> How does javascript work?</h4>
-            <p><h5>Ans: </h5></p>
-            <h4><span>Ques: </span> What Does javascript event loop?</h4>
-            <p><h5>Ans: </h5></p>
+            <p><h5>Ans: </h5>Well, JavaScript is a scripting language.It's use in a web-page to make data updating,control multimedia and other lots of projects.Javascript is a scripting language.Specially, it is a client-side scripting language.It's means it works in client machine.Every web-browser has a default javascript engine.For example, Google Chrome uses V8 engine.</p>
+            <p>JavaScript is an interpreted language.When a browser loads a web-page,the browser has a built-in interpreter thats reads the javascript code line by line (By default) and runs it.By default it reads and loads code asynchronously.That means it happen independently of the main program flow.Javascript also works on callback function.It is a function that passing a value to another function and it executed when the event happens.</p>
             <h4><span>Ques: </span> Difference between local storage vs session storage?</h4>
             <p><h5>Ans: </h5></p>
 
