--- a/index.html
+++ b/index.html
@@ -81,10 +81,13 @@
         <section class="QsnDiv">
             <h1>Questions & Answers</h1>
             <h4><span>Ques: </span> How does javascript work?</h4>
-            <p><h5>Ans: </h5>Well, JavaScript is a scripting language.It's use in a web-page to make data updating,control multimedia and other lots of projects.Javascript is a scripting language.Specially, it is a client-side scripting language.It's means it works in client machine.Every web-browser has a default javascript engine.For example, Google Chrome uses V8 engine.</p>
+            <p><h5>Ans: </h5>Well, JavaScript is a scripting language.It's use in a web-page to make data updating,control multimedia and other lots of works.Javascript is a scripting language.Specially, it is a client-side scripting language.It's means it works in client machine.Every web-browser has a default javascript engine.For example, Google Chrome uses V8 engine.</p>
             <p>JavaScript is an interpreted language.When a browser loads a web-page,the browser has a built-in interpreter thats reads the javascript code line by line (By default) and runs it.By default it reads and loads code asynchronously.That means it happen independently of the main program flow.Javascript also works on callback function.It is a function that passing a value to another function and it executed when the event happens.</p>
+
             <h4><span>Ques: </span> Difference between local storage vs session storage?</h4>
-            <p><h5>Ans: </h5></p>
+            <p><h5>Ans: </h5> There are two kinds Web Storage API .One is localStorage and another is sessionStorage.This two type storage maintain different storage area of the web-page session.Both of these have a limit of 5MB storage space.</p>
+            <p>The main difference between two storage system is that sessionStorage only maintain a storage area while the web-browser is open.Even it can store when web-pages reload or restores.Page session starts when the web-browser is open. Besides, the data of sessionStorage is cleared when the web-page is closed.<br>
+            On the otherhand,localStorage can continue store data after the web-browser is closed.So that data of localStorage does not expire like sessionStorage.</p>
 
         </section>
         <footer></footer>
